--- a/todo/package.json
+++ b/todo/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "expo": "~54.0.14",
+    "expo": "54.0.21",
+    "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.5"
   },
   "private": true,
   "devDependencies": {
